<resources>
    <string name="app_name">Bus Location</string>
    <string name="start_button_entrar">Entrar</string>
    <string name="start_textviewl_novaconta">Não tem uma conta?</string>
    <string name="start_textviewl_cliqueeaqui">Clique aqui</string>
    <string name="cadastro_txt_nome">Nome</string>
    <string name="cadastro_txt_numero">Número</string>
    <string name="cadastro_txt_email">Email</string>
    <string name="cadastro_txt_senha">Senha</string>
    <string name="cadastro_txt_csenha">Confirmar senha</string>
    <string name="cadastro_btn_cadastrar">Cadastrar</string>
    <string name="cadastro_btn_facebook">Cadastrar usando o Facebook</string>
    <string name="login_btn_facebook">Entrar com o Facebook</string>
    <string name="login_btn_entrar">Entrar</string>
    <string name="menutitle_mainmenu">Sair</string>
    <string name="menutitle_userconfig">configurar conta</string>
</resources>
