<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_img_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#64000000"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mail_white_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/cadastro_txt_email"
                android:textColor="@color/white"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_senha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:background="#64000000"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/cadastro_txt_senha"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <Button
                android:id="@+id/login_entrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/designer_layout_buttons"
                android:drawableStart="@drawable/ic_mail_white_24dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/login_btn_entrar"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="Ou"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_facebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:background="@drawable/designer_layout_buttonsf"
                android:drawableLeft="@drawable/ic_facebook_logo"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:text="@string/login_btn_facebook"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>